src/test/deca/context/invalid/custom/undeclared-variable.deca
// Description:
//    utiliser une variable qui n a jamais ete declare.
//
// Resultats:
//    Ligne 13: b n a pas ete declare dans ce scope.
//
// Historique:
//    cree le 01/01/2022

{
    // ne doit pas complier.
    int a;
    print(a+b);
}
